Consolidate CORS configuration into SecurityConfig